--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>This is my heading</h1>
-<p>This is my paragraph.</p>
+<h1>Ella Voigt’s Webpage</h1>
+<p>Paragraph.</p>
 
 </body>
 </html>
