--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
@@ -6,7 +6,7 @@ l<!DOCTYPE html>
 <body>
 
 <h1>Ella Voigt’s Webpage</h1>
-<p>Paragraph.</p>
+<p>Content.</p>
 
 </body>
 </html>
