--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 		<br/>
 		<p>Thanks for visiting my site! I hope you like it :)</p>
-		<p><a href="https://erv314.github.io/about.html”>About Me!</a></p>
+		<p><a href="https://erv314.github.io/about.html">About Me!</a></p>
 	</body>
 </html>
